@@ -1,0 +1,3 @@
+#!/bin/bash
+
+docker run --rm -v /root:/sysdir registry.cn-beijing.aliyuncs.com/k7scn/pkg:1.18.16 cp /kube.tgz /sysdir
