@@ -1,3 +1,11 @@
+## 20210226
+
+- 新增getpkg获取k8s资源pkg
+- 新增getistiov1.0.3
+- docker-compose版本升级为1.28.5
+- linkerd2版本升级为2.9.4
+- k3s版本升级为v1.20.4+k3s1
+
 ## 20210218
 
 - k8s版本升级为1.18.16
